[project]
name = "repl-nix-securenotekeeper"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "cryptography>=43.0.3",
    "python-dotenv>=1.0.1",
    "flask-login>=0.6.3",
    "flask-migrate>=4.0.7",
    "flask-cors>=5.0.0",
]
